[gd_scene load_steps=6 format=2]

[ext_resource path="res://test-elements/laser-catcher/laser-catcher.png" type="Texture" id=1]
[ext_resource path="res://test-elements/laser-catcher/LaserCatcher.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 43 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 16 )

[node name="LaserCatcher" type="StaticBody2D"]
collision_layer = 14
collision_mask = 14
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 8, 8, 512, 512 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -32, 0 )
shape = SubResource( 1 )

[node name="LaserDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="LargeShape2D" type="CollisionShape2D" parent="LaserDetection"]
position = Vector2( 8, 0 )
shape = SubResource( 2 )
disabled = true

[node name="SmallShape2D" type="CollisionShape2D" parent="LaserDetection"]
position = Vector2( 8, 32 )
shape = SubResource( 3 )
disabled = true
